update banner and remove extra elements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>The Ramen Shop</title>
+		<title>Eloquent Ramen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 						<h1><a href="index.html">Eloquent Ramen</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="special">
+								<!-- <li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
@@ -33,7 +33,7 @@
 											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
-								</li>
+								</li> -->
 							</ul>
 						</nav>
 					</header>
@@ -47,7 +47,7 @@
 								<li><a href="#" class="button primary">Menu</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<!-- <a href="#one" class="more scrolly">Learn More</a> -->
 					</section>
 
 				<!-- One -->
@@ -59,11 +59,11 @@
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
-							<ul class="icons major">
+							<!-- <ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
