Add location, phone

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eloquent Ramen</title>
+		<title>ELOQUENT RAMEN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,6 +43,10 @@
 						<div class="inner">
 							<h2>Eloquent Ramen</h2>
 							<p>You will sell your kidneys for a bowl of Ramen here</p>
+							<p>Open Daily / 5 P.M to 11 P.M</p>
+							<p>1730 Heaven Blvd. Galaxy 00010110</p> 
+							<p>Another Life, Far Away From Here 00192</p>
+							<p>415.500.9928</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Menu</a></li>
 							</ul>
