--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 							<h2>Eloquent Ramen</h2>
 							<p>You will sell your kidneys for a bowl of Ramen here</p>
 							<p>Open Daily / 5 P.M to 11 P.M</p>
-							<p>1730 Heaven Blvd. Galaxy 00010110</p> 
-							<p>Another Life, Far Away From Here 00192</p>
 							<p>415.500.9928</p>
+							<div>
+								<p id="address">1730 Heaven Blvd. Galaxy 00010110 <br />
+								Another Life, Far Away From Here 00192</p>
+							</div>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Menu</a></li>
 							</ul>
@@ -58,10 +60,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Welcome to Eloquent Ramen</h2>
+								<p>Where you will beg to be in an infinite while loop, <br />
+									slurping the best fucking ramen in the Universe.</p>
 							</header>
 							<!-- <ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
