--- a/index.html
+++ b/index.html
@@ -75,30 +75,30 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
+							<div class="image"><img src="images/ramen-classic.jpg" alt="" /></div><div class="content">
+								<h2>The Classic<br />
+								</h2>
+								<p>Can't go wrong with the classic clear and savory broth. Transport your taste buds to the future with our classic ramen, featuring hand-crafted noodles in a perfectly balanced broth infused with rare, exotic spices.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/ramen01.jpg" alt="" /></div><div class="content">
+								<h2>The Special<br />
+								</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/ramen-vegan.jpg" alt="" /></div><div class="content">
+								<h2>The Vegan<br />
+								</h2>
+								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich is flavor!)</p>
 							</div>
 						</section>
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -132,10 +132,10 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<!-- <section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Arcue ut vel commodo</h2>
@@ -146,7 +146,7 @@
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer id="footer">
@@ -158,7 +158,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; MESSYDEV 2023</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
