fix typo in vegan ramen section

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 							<div class="image"><img src="images/ramen01.jpg" alt="" /></div><div class="content">
 								<h2>The Special<br />
 								</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>Experience the culinary creativity of our chef's special ramen, bursting with unique flavor combinations, premium ingredients, and exquisite presentation.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/ramen-vegan.jpg" alt="" /></div><div class="content">
 								<h2>The Vegan<br />
 								</h2>
-								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich is flavor!)</p>
+								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich in flavor!)</p>
 							</div>
 						</section>
 					</section>
