--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 							<h2>Eloquent Ramen</h2>
 							<p>You will sell your kidneys for a bowl of Ramen here</p>
 							<p>Open Daily / 5 P.M to 11 P.M</p>
-							<p>415.500.9928</p>
+							<p>012.345.6789</p>
 							<div>
-								<p id="address">1730 Heaven Blvd. Galaxy 00010110 <br />
-								Another Life, Far Away From Here 00192</p>
+								<p id="address">1730 Heaven Blvd. Galaxy 00001001 + 00001010 <br />
+								Another Life, Far Far Away From Here 00010101</p>
 							</div>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Menu</a></li>
@@ -61,8 +61,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Welcome to Eloquent Ramen</h2>
-								<p>Where you will beg to be in an infinite while loop, <br />
-									slurping the best fucking ramen in the Universe.</p>
+								<p>"Where you will beg to be in an infinite while loop, <br />
+									slurping the best fucking ramen in the Universe." - <strong>Space Aliens Review</strong>, 2023</p>
 							</header>
 							<!-- <ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
