fix menu button to bring to proper location and price items

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 								Another Life, Far Far Away From Here 00010101</p>
 							</div>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Menu</a></li>
+								<li><a href="#two" class="button primary scrolly">Menu</a></li>
 							</ul>
 						</div>
-						<!-- <a href="#one" class="more scrolly">Learn More</a> -->
+						<!-- <a href="#two" class="more scrolly">Learn More</a> -->
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+					<section id="two" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Welcome to Eloquent Ramen</h2>
@@ -79,6 +79,7 @@
 								<h2>The Classic<br />
 								</h2>
 								<p>Can't go wrong with the classic clear and savory broth. Transport your taste buds to the future with our classic ramen, featuring hand-crafted noodles in a perfectly balanced broth infused with rare, exotic spices.</p>
+								<p>$9</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -86,6 +87,7 @@
 								<h2>The Special<br />
 								</h2>
 								<p>Experience the culinary creativity of our chef's special ramen, bursting with unique flavor combinations, premium ingredients, and exquisite presentation.</p>
+								<p>$11</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -93,6 +95,7 @@
 								<h2>The Vegan<br />
 								</h2>
 								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich in flavor!)</p>
+								<p>$9</p>
 							</div>
 						</section>
 					</section>
@@ -147,18 +150,35 @@
 							</ul>
 						</div>
 					</section> -->
+					
 
+				<!-- Menu -->
+				<section id="menu">
+
+				</section>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+
+
+							<li><a href="https://www.instagram.com/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://twitter.com/" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li></li>
+							
+							<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 						</ul>
 						<ul class="copyright">
-							<li>&copy; MESSYDEV 2023</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; MESSYDEV 2023</li>
+							<li>
+								<a href="https://github.com/smallnumbers0" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a>
+							</li>
+							<li>
+								<a href="https://www.linkedin.com/in/jackychoi000/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a>
+							</li>
+							<li>
+								Design by: <a href="http://html5up.net">HTML5 UP</a>
+							</li>
 						</ul>
 					</footer>
 
