add 2 more ramen flavor options

--- a/index.html
+++ b/index.html
@@ -98,7 +98,24 @@
 								<p>$9</p>
 							</div>
 						</section>
-					</section>
+
+					<section class="spotlight">
+							<div class="image"><img src="images/ramen05.jpg" alt="" /></div><div class="content">
+								<h2>The Binary<br />
+								</h2>
+								<p>Just like the name implies, The Binary is a bowl of noodles that you'll love or absolutely hate.<br /> (Inspired by the Korean flavors of Planet Earth)</p>
+								<p>$8</p>
+							</div>
+						</section>
+					<section class="spotlight">
+							<div class="image"><img src="images/ramen03.jpg" alt="" /></div><div class="content">
+								<h2>The Catch<br />
+								</h2>
+								<p>Crafted by the great Ramen God, The Catch uses simple ingredients to create a powerful punch of flavors.</p>
+								<p>$10</p>
+							</div>
+						</section>
+					</section>	
 
 				<!-- Three -->
 					<!-- <section id="three" class="wrapper style3 special">
@@ -153,9 +170,7 @@
 					
 
 				<!-- Menu -->
-				<section id="menu">
-
-				</section>
+				
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
