Fix footer margin

--- a/index.html
+++ b/index.html
@@ -185,15 +185,9 @@
 						</ul>
 						<ul class="copyright">
 							<li>&copy; MESSYDEV 2023</li>
-							<li>
-								<a href="https://github.com/smallnumbers0" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a>
-							</li>
-							<li>
-								<a href="https://www.linkedin.com/in/jackychoi000/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a>
-							</li>
-							<li>
-								Design by: <a href="http://html5up.net">HTML5 UP</a>
-							</li>
+							<li><a href="https://github.com/smallnumbers0" target="_blank" class="icon brands fa-github"><span class="label"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/jackychoi000/" target="_blank" class="icon brands fa-linkedin-in"><span class="label"></a></li>
+							<li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
