--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Welcome to Eloquent Ramen</h2>
-								<p>"Where you will beg to be in an infinite while loop, <br />
-									slurping the best fucking ramen in the Universe." - <strong>Space Aliens Review</strong>, 2023</p>
+								<p>Where one bite will take you on an infinite while loop,<br/>slurping the best fucking ramen in the Universe.</p>
 							</header>
 							<!-- <ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -74,47 +73,61 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+
 						<section class="spotlight">
-							<div class="image"><img src="images/ramen-classic.jpg" alt="" /></div><div class="content">
-								<h2>The Classic<br />
+							<div class="image"><img src="images/ramen05.jpg" alt="bowl of ramen" /></div><div class="content">
+								<h2>The Binary<br />
 								</h2>
-								<p>Can't go wrong with the classic clear and savory broth. Transport your taste buds to the future with our classic ramen, featuring hand-crafted noodles in a perfectly balanced broth infused with rare, exotic spices.</p>
-								<p>$9</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/ramen01.jpg" alt="" /></div><div class="content">
-								<h2>The Special<br />
-								</h2>
-								<p>Experience the culinary creativity of our chef's special ramen, bursting with unique flavor combinations, premium ingredients, and exquisite presentation.</p>
-								<p>$11</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/ramen-vegan.jpg" alt="" /></div><div class="content">
-								<h2>The Vegan<br />
-								</h2>
-								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich in flavor!)</p>
+								<p>Just like the name implies, The Binary is a bowl of noodles that you'll love or absolutely hate.<br /> (Inspired by the Korean flavors)</p>
 								<p>$9</p>
 							</div>
 						</section>
 
-					<section class="spotlight">
-							<div class="image"><img src="images/ramen05.jpg" alt="" /></div><div class="content">
-								<h2>The Binary<br />
+						<section class="spotlight">
+							<div class="image"><img src="images/ramen-spicy.jpg" alt="Picture of Order 66 ramen bowl" /></div><div class="content">
+								<h2>Order 66<br />
 								</h2>
-								<p>Just like the name implies, The Binary is a bowl of noodles that you'll love or absolutely hate.<br /> (Inspired by the Korean flavors of Planet Earth)</p>
-								<p>$8</p>
+								<p>Legend says this ramen is so spicy, it has taken the lives of many brave souls. It is a top secret special broth delivered by the Ramen Devils. It is free for those who dare to try.</p>
+								<p>Free</p>
 							</div>
 						</section>
-					<section class="spotlight">
-							<div class="image"><img src="images/ramen03.jpg" alt="" /></div><div class="content">
-								<h2>The Catch<br />
+
+						<section class="spotlight">
+							<div class="image"><img src="images/ramen-classic.jpg" alt="Picture of the eloquent ramen bowl" /></div><div class="content">
+								<h2>The Eloquent<br />
 								</h2>
-								<p>Crafted by the great Ramen God, The Catch uses simple ingredients to create a powerful punch of flavors.</p>
+								<p>Crash your taste buds with our classic eloquent ramen, featuring hand-crafted noodles in a perfectly balanced broth infused with our specialty spices.</p>
+								<p>$9</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image"><img src="images/ramen01.jpg" alt="Picture of the chef's special ramen bowl" /></div><div class="content">
+								<h2>The Special<br />
+								</h2>
+								<p>Experience the culinary creativity of our chef's special ramen, bursting with unique flavor combinations, premium ingredients, and exquisite presentation.</p>
 								<p>$10</p>
 							</div>
 						</section>
+
+						<section class="spotlight">
+							<div class="image"><img src="images/ramen-vegan.jpg" alt="Picture of a vegan ramen bowl" /></div><div class="content">
+								<h2>The Vegan<br />
+								</h2>
+								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich in flavor)</p>
+								<p>$9</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image"><img src="images/ramen03.jpg" alt="Picture of the The Derivative ramen bowl" /></div><div class="content">
+								<h2>The Derivative<br />
+								</h2>
+								<p>Crafted by the great Ramen Gods themselves, The Derivative uses simple ingredients to create a instantaneous change of flavors. Prepare to taste 10 layers of flavors in this bowl.</p>
+								<p>$10</p>
+							</div>
+						</section>
+
 					</section>	
 
 				<!-- Three -->
@@ -155,18 +168,18 @@
 					</section> -->
 
 				<!-- CTA -->
-					<!-- <section id="cta" class="wrapper style4">
+					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Come visit us!</h2>
+								<p>And please read our origin story</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="generic.html" class="button fit primary">Our Story</a></li>
+								<!-- <li><a href="#" class="button fit"></a></li> -->
 							</ul>
 						</div>
-					</section> -->
+					</section>
 					
 
 				<!-- Menu -->
@@ -179,12 +192,10 @@
 							<li><a href="https://www.instagram.com/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://twitter.com/" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li></li>
-							
-							<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+							<li><a href="https://accounts.google.com/v3/signin/identifier?dsh=S-1542721997%3A1678214723692224&continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&ifkv=AWnogHdddw-FvoqxXbpMAJYI3hpT0BLG5Ss7DDpKtTgO__mIha7k5EMDSQZLVMNzsPPvQsO6NGPdFQ&osid=1&passive=1209600&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<ul class="copyright">
-							<li>&copy; MESSYDEV 2023</li>
+						<ul class="icons">
+							<li>&copy; MESSYDEV 2023 | ALL RIGHTS RESERVED</li>
 							<li><a href="https://github.com/smallnumbers0" target="_blank" class="icon brands fa-github"><span class="label"></span></a></li>
 							<li><a href="https://www.linkedin.com/in/jackychoi000/" target="_blank" class="icon brands fa-linkedin-in"><span class="label"></a></li>
 							<li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
