--- a/elements.html
+++ b/elements.html
@@ -19,10 +19,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Eloquent Ramen</a></h1>
 						<nav id="nav">
 							<ul>
-								<li class="special">
+								<!-- <li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
@@ -33,7 +33,7 @@
 											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
-								</li>
+								</li> -->
 							</ul>
 						</nav>
 					</header>
