fix typo at order 66 ramen

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 							<div class="image"><img src="images/ramen-spicy.jpg" alt="Picture of Order 66 ramen bowl" /></div><div class="content">
 								<h2>Order 66<br />
 								</h2>
-								<p>Legend says this ramen is so spicy, it has taken the lives of many brave souls. It is a top secret special broth delivered by the Ramen Devils. It is free for those who dare to try.</p>
-								<p>Free</p>
+								<p>Legend says this ramen is so spicy, it has taken the lives of many brave souls. It is a top secret special broth delivered by the Ramen Devils.</p>
+								<p>Free for those who dare to try</p>
 							</div>
 						</section>
 
