--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 								</h2>
 								<p>Just like the name implies, The Binary is a bowl of noodles that you'll love or absolutely hate.<br /> (Inspired by the Korean flavors)</p>
 								<p>$9</p>
+								<p>VEGAN</p>
 							</div>
 						</section>
 
@@ -116,6 +117,7 @@
 								</h2>
 								<p>Indulge in the umami-packed goodness of our vegan ramen, complete with hearty veggies, tofu, and a rich, savory broth simmered in exotic spices. <br />(Not very spicy, but rich in flavor)</p>
 								<p>$9</p>
+								<p>VEGAN</p>
 							</div>
 						</section>
 
